修改背景图片

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: DY-Blog 
 SEOTitle: 邓有的博客 | BY Blog
-header-img: img/post-bg-desk.jpg
+header-img: img//coredump.jpg
 email: 1071102039@qq.com
 description: "每个胜利背后都有许多尝试"
 keyword: "DY, DY Blog, 邓有的博客, dengyou, 邓有, iOS, Apple, iPhone"
