--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: DY-Blog 
-SEOTitle: 邓有的博客 | BY Blog
+SEOTitle: 邓有的博客 | DY Blog
 header-img: img//coredump.jpg
 email: 1071102039@qq.com
 description: "每个胜利背后都有许多尝试"
